fix alignment

--- a/static/main.css
+++ b/static/main.css
@@ -95,12 +95,23 @@ th {
 	background-color: rgb(53, 64, 113);
 	color: rgb(201, 201, 201);
 	padding: 10px;
+    text-align: center;
 }
 
 td, tr {
 	padding: 10px;
 	margin-left:auto;
 	margin-right: auto;
+}
+th, td {
+    border: 1px solid black;
+}
+
+td:first-child {
+    text-align: left;
+}
+td:not(:first-child) {
+    text-align: center;
 }
 
 tr:hover {background-color: rgb(53, 64, 113);
